--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
     <script src="./echarts.js"></script>
 </head>
 <body>
-    <select id="select">
+    <select id="select-day">
         <option value="default">全部数据</option>
         <option value="3">最近3天</option>
         <option value="5" selected="selected">最近5天</option>
@@ -21,42 +21,66 @@
         <option value="30">最近30天</option>
         <option value="90">最近90天</option>
     </select>
+    <select id="select-type">
+        <option value="indexes" selected="selected">指数对比</option>
+        <option value="concept">概念对比</option>
+        <option value="industry">行业对比</option>
+    </select>
+    <label><input id="choose-all-data" type="checkbox"/>全部数据</label>
     <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
-    <div id="indexes" style="width: 100%; height: 600px;"></div>
-    <div id="industry" style="width: 100%; height: 600px;"></div>
-    <div id="concept" style="width: 100%; height: 600px;"></div>
+    <div id="chart" style="width: 100%; height: 650px;"></div>
     <script type="text/javascript">
         // 基于准备好的dom，初始化echarts实例
-        var indexChart = echarts.init(document.getElementById('indexes'));
-        var industryChart = echarts.init(document.getElementById('industry'));
-        var conceptChart = echarts.init(document.getElementById('concept'));
-        var select = document.getElementById('select');
+        var chart = echarts.init(document.getElementById('chart'));
+        var selectDay = document.getElementById('select-day');
+        var selectType = document.getElementById('select-type');
+        var chooseAllData = document.getElementById('choose-all-data');
+        var TypeLabels = {
+            indexes: '指数对比',
+            concept: '概念对比',
+            industry: '行业对比'
+        };
+        var gDays = 5;
+        var gType = {value: 'indexes', label: TypeLabels.indexes};
         var gData = {};
+        var gIsAllData = false;
 
-        select.addEventListener('change', (e) => {
-            const dataLength = Number(e.target.value);
-            renderChart(indexChart, gData.indexes, dataLength, {
-                title: {text: '指数对比'}
+        selectDay.addEventListener('change', (e) => {
+            gDays = Number(e.target.value);
+            renderChart(chart, gData[gType.value], gDays, {
+                title: {text: TypeLabels[gType.value]}
             });
-            renderChart(industryChart, gData.industry, dataLength, {
-                title: {text: '行业对比'}
-            });
-        })
+        });
 
-        // 使用刚指定的配置项和数据显示图表。
-        fetch('./data.json')
-            .then(res => {
-                if (!res.ok) alert('fetch error!');
-                res.json().then(data => {
-                    gData = data;
-                    renderChart(indexChart, gData.indexes, 5, {
-                        title: {text: '指数对比'}
-                    });
-                    renderChart(industryChart, gData.industry, 5, {
-                        title: {text: '行业对比'}
+        selectType.addEventListener('change', (e) => {
+            gType.value = e.target.value;
+            gType.label = TypeLabels[e.target.value];
+            renderChart(chart, gData[gType.value], gDays, {
+                title: {text: TypeLabels[gType.value]}
+            });
+        });
+
+        chooseAllData.addEventListener('change', (e) => {
+            gIsAllData = e.target.checked;
+            renderChart(chart, gData[gType.value], gDays, {
+                title: {text: TypeLabels[gType.value]}
+            });
+        });
+
+        window.addEventListener('load', function () {
+            // 使用刚指定的配置项和数据显示图表。
+            fetch('./data.json')
+                .then(res => {
+                    if (!res.ok) alert('fetch error!');
+                    res.json().then(data => {
+                        gData = data;
+                        renderChart(chart, gData[gType.value], gDays, {
+                            title: {text: TypeLabels[gType.value]}
+                        });
                     });
                 });
-            });
+        })
+
 
         function changeDataStartDate(data, newLength) {
             const newData = data.slice(data.length - newLength + 1);
@@ -67,6 +91,7 @@
         }
 
         function renderChart(chart, data, showLength, options) {
+            data = getData(data);
             // 指定图表的配置项和数据
             var option = Object.assign({
                 tooltip: {
@@ -99,6 +124,56 @@
                 }))
             }, options);
             chart.setOption(option);
+        }
+
+        function getData(data, continousDays = 2) {
+            if (gIsAllData) {
+                return data;
+            } else {
+                return getTopTenOfContinuouslyIncreased(data, continousDays);
+            }
+        }
+
+        function getTopTenOfContinuouslyIncreased(data, continousDays = 2) {
+            data.sort((a, b) => {
+                const aInfo = getIncreaseInfo(a.data, continousDays);
+                const bInfo = getIncreaseInfo(b.data, continousDays);
+                if (aInfo.type === 0b111) {
+                    return -1;
+                } else if (bInfo.type === 0b111) {
+                    return 1;
+                } else if (aInfo.increasedLast > bInfo.increasedLast) {
+                    return -1;
+                } else if (aInfo.increasedLast < bInfo.increasedLast) {
+                    return 1;
+                } else if (aInfo.type > bInfo.type) {
+                    return -1;
+                } else if (aInfo.type < bInfo.type) {
+                    return 1;
+                } else if (aInfo.increased > bInfo.increased) {
+                    return -1;
+                } else if (aInfo.increased < bInfo.increased) {
+                    return 1;
+                }
+                return 0;
+            });
+            return data.slice(0, 20);
+        }
+
+        function getIncreaseInfo(data, continousDays) {
+            let type = '';
+            for (let i = 1; i <= continousDays + 1; i++) {
+                const cur = data.length - i;
+                const last = data.length - i - 1;
+                if (data[cur] > data[last]) {
+                    type += '1'
+                } else {
+                    type += '0'
+                }
+            }
+            const increased = data[data.length - 1] - data[data.length - continousDays - 1];
+            const increasedLast = data[data.length - 1] - data[data.length - 2];
+            return {type, increased, increasedLast};
         }
     </script>
 </body>
