--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
         <option value="default">全部数据</option>
         <option value="3">最近3天</option>
         <option value="5">最近5天</option>
-        <option value="15" selected="selected">最近15天</option>
+        <option value="10" selected="selected">最近10天</option>
         <option value="30">最近30天</option>
         <option value="90">最近90天</option>
     </select>
@@ -40,7 +40,7 @@
             concept: '概念对比',
             industry: '行业对比'
         };
-        var gDays = 15;
+        var gDays = 10;
         var gType = {value: 'indexes', label: TypeLabels.indexes};
         var gData = {};
         var gIsAllData = false;
@@ -91,7 +91,7 @@
         }
 
         function renderChart(chart, data, showLength, options) {
-            data = getData(data);
+            data = getData(data, showLength);
             // 指定图表的配置项和数据
             var option = Object.assign({
                 tooltip: {
